@@ -26,6 +26,7 @@ typedef struct edgex_device_serviceinfo
   struct timespec timeout;
   const char *checkinterval;
   const char *bindaddr;
+  uint64_t maxreqsz;
 } edgex_device_serviceinfo;
 
 typedef struct edgex_device_service_endpoint
@@ -82,7 +83,7 @@ toml_table_t *edgex_device_loadConfig
   devsdk_error *err
 );
 
-iot_data_t *edgex_config_defaults (const char *dflprofiledir, const iot_data_t *driverconf);
+iot_data_t *edgex_config_defaults (const iot_data_t *driverconf);
 
 char *edgex_device_getRegURL (toml_table_t *config);
 
